appbox/calculator/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ironman-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ironman.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ironman-service
                port:
                  number: 80
